# jit_blocks

./: .clang-tidy  .codespellrc  .lsan-suppress  BUILDING.md  BUILDING_8md.html  CMakeLists.txt  CMakePresets.json  CODE__OF__CONDUCT_8md.html  CONTRIBUTING_8md.html  HACKING.md  HACKING_8md.html  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  classes.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_77c79b62eb07c2d2cc61be4311171246.html  dir_a918c9ecf3e861c048583215afed1b1e.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  graph_legend.html  group__context__builder.html  group__divide.html  group__dynswitch.html  group__expr-predefined-ops.dot  group__expr-predefined-ops.html  group__expr.dot  group__expr.html  group__funccalls.html  index.html  jit__blocks_8h.html  jit__blocks_8h__incl.dot  jit__blocks_8h_source.html  (+10 more)
.github/workflows/: ci.yml
cmake/: Findlibgccjit.cmake  docs-ci.cmake  docs.cmake  install-config.cmake  install-rules.cmake  variables.cmake
docs/: Doxyfile.in
include/jit_blocks/: jit_blocks.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  files_0.js  files_1.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  groups_7.js  groups_8.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js  typedefs_0.js  variables_0.js  (+2 more)
source/: common.c  common.h  divide.c  dynswitch.c  expr.c  funccalls.c  jit_blocks.c
test/: CMakeLists.txt
test/source/: jit_blocks_divide_test.c  jit_blocks_dynswitch_test.c  jit_blocks_expr_test.c  jit_blocks_funccalls_test.c  jit_blocks_test.c  test_assert.h
